Add Docker support for Render.com deployment